namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: main

---

apiVersion: v1
kind: Namespace
metadata:
  name: apply

---

apiVersion: v1
kind: Namespace
metadata:
  name: schedule

---

apiVersion: v1
kind: Namespace
metadata:
  name: result

---

apiVersion: v1
kind: Namespace
metadata:
  name: db

---

apiVersion: v1
kind: Namespace
metadata:
  name: admin
